--- a/PriceArtWebService-list100.properties
+++ b/PriceArtWebService-list100.properties
@@ -1,2 +1,4 @@
 #Application Config
-application.listino: 100
+application.listino: 3
+info.nome.nome-app = "PriceArt Web Service - Versione Autenticazione JWT"
+info.profilo = GitHub
