--- a/PriceArtWebService-list2.properties
+++ b/PriceArtWebService-list2.properties
@@ -1,2 +1,4 @@
 #Application Config
 application.listino: 2
+info.nome.nome-app = "PriceArt Web Service - Versione Autenticazione JWT"
+info.profilo = GitHub
