update info actuator

--- a/PriceArtWebService-list100.properties
+++ b/PriceArtWebService-list100.properties
@@ -1,4 +1,5 @@
 #Application Config
-application.listino: 3
+application.listino: 1
+info.assistenza.nome= "arrangiati"
 info.nome.nome-app = "PriceArt Web Service - Versione Autenticazione JWT"
 info.profilo = GitHub
