update info actuator

--- a/PriceArtWebService-list3.properties
+++ b/PriceArtWebService-list3.properties
@@ -1,5 +1,6 @@
 #Application Config
-application.listino: 1
+application.listino: 3
 info.assistenza.nome= "arrangiati"
 info.nome.nome-app = "PriceArt Web Service - Versione Autenticazione JWT"
 info.profilo = GitHub
+info.label = list3
